# martech-ai-skills-and-tools

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: marketplace.yml
CLI/gmc-cli/: .gitignore  CHANGELOG.md  README.md  gmc  pyproject.toml  setup.sh  test.sh
CLI/gmc-cli/.github/workflows/: ci.yml  publish.yml
CLI/gmc-cli/src/gmc_cli/: __init__.py  cli.py
CLI/google-ads-cli/: .gitignore  LICENSE  NOTICE  README.md  package-lock.json  package.json
CLI/google-ads-cli/.claude-plugin/: marketplace.json
CLI/google-ads-cli/skills/google-ads-cli/: SKILL.md
CLI/google-ads-cli/src/: api.ts  auth.ts  index.ts  utils.ts
CLI/google-ads-cli/src/commands/: accounts.ts  adgroups.ts  assets.ts  auth.ts  campaigns.ts  query.ts  stats.ts  targeting.ts
CLI/microsoft-ads-cli/: LICENSE  NOTICE  README.md  package.json  pnpm-lock.yaml
CLI/microsoft-ads-cli/skills/microsoft-ads-cli/: SKILL.md
CLI/microsoft-ads-cli/src/: api.ts  auth.ts  index.ts  report.ts  utils.ts
CLI/microsoft-ads-cli/src/commands/: accounts.ts  adgroups.ts  assets.ts  auth.ts  campaigns.ts  query.ts  stats.ts  targeting.ts
Skills/martech-teardown/references/: report-structure.md
Skills/martech-teardown/scripts/: tracking_audit.mjs
scripts/: build-marketplace.mjs  list-skills.sh
skills/martech-teardown/: SKILL.md
skills/martech-teardown/assets/: report-template.html
skills/martech-teardown/references/: signatures.md
skills/martech-teardown/scripts/: stack_scan.sh
