[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmc-cli"
version = "0.1.0"
description = "Google Merchant Center CLI for the Merchant API v1 — products, feeds, reports, promotions. JSON output, jq-friendly."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Alessandro Moretti" }]
requires-python = ">=3.10"
keywords = [
    "google-merchant-center",
    "merchant-api",
    "google-shopping",
    "shopping-ads",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "requests>=2.31",
]

[project.scripts]
gmc = "gmc_cli.cli:main"

[project.urls]
Homepage = "https://github.com/almoretti/martech-ai-skills-and-tools/tree/main/CLI/gmc-cli"
Repository = "https://github.com/almoretti/martech-ai-skills-and-tools/tree/main/CLI/gmc-cli"
Issues = "https://github.com/almoretti/martech-ai-skills-and-tools/issues"
Changelog = "https://github.com/almoretti/martech-ai-skills-and-tools/blob/main/CLI/gmc-cli/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/gmc_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"
